--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -107,7 +107,7 @@ nav ul li a:hover::before {
 }
 
 .btn-download:hover {
-    background-color: #FFC75E;
+    background-color: #fffbf4;
 }
 
 .hero-container {
