--- a/assets/SCSS/portfolio.scss
+++ b/assets/SCSS/portfolio.scss
@@ -67,7 +67,7 @@ nav {
 
 .btn-download {
     background-color: #FFC75E;
-    color: white;
+    color: rgb(5, 18, 47);
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
@@ -77,7 +77,7 @@ nav {
     margin-right: 20px;
 
     &:hover {
-        background-color: #ffab00; // Changed hover color for contrast
+        background-color: #fffbf4; // Changed hover color for contrast
     }
 }
 
