modifica peso immagini

--- a/assets/SCSS/portfolio.css
+++ b/assets/SCSS/portfolio.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-image: url("../img/sfondo_portfolio.png");
+  background-image: url("../img/sfondo.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
