--- a/assets/SCSS/portfolio.scss
+++ b/assets/SCSS/portfolio.scss
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url("../img/sfondo_portfolio.png"); // Specifica il percorso dell'immagine
+    background-image: url("../img/sfondo.png");
     background-size: cover; // Assicura che l'immagine copra l'intera area del body
     background-repeat: no-repeat; // Evita che l'immagine venga ripetuta
     background-position: center; // Centra l'immagine
