--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -143,6 +143,12 @@ main {
     background-color: #ffab00;
 }
 
+.social h2 {
+    color: #000000;
+    text-align: center;
+    margin-top: 40px;
+}
+
 .social-container {
     display: flex;
     justify-content: center;
