--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -224,6 +224,7 @@ footer {
     nav ul li {
         padding: 10px;
         text-align: left;
+        padding-left: 20px; /*  padding a sinistra */
     }
 }
 
