--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -99,12 +99,12 @@ nav ul li a:focus::before {
 #changing-text {
     font-size: 2.5rem; /* Aumentato per maggiore impatto */
     font-weight: bold;
-    color: #ffffff;
+    color: #090229;
     margin-top: 40px;
 }
 
 .changing-words {
-    color: #ffdd00; /* Puoi cambiare il colore a tuo piacimento */
+    color: #ffffff; /* Puoi cambiare il colore a tuo piacimento */
     font-size: 2.3rem; /* Maggiore dimensione per le parole in cambiamento */
     font-weight: bold;
 }
