modifica contrasto in style css

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -99,7 +99,7 @@ nav ul li a:focus::before {
 #changing-text {
     font-size: 2.5rem; /* Aumentato per maggiore impatto */
     font-weight: bold;
-    color: #ffd000;
+    color: #080342;
     margin-top: 40px;
 }
 
