--- a/assets/SCSS/portfolio.scss
+++ b/assets/SCSS/portfolio.scss
@@ -6,10 +6,9 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url("../img/sfondo.png");
-    background-size: cover; // Assicura che l'immagine copra l'intera area del body
-    background-repeat: no-repeat; // Evita che l'immagine venga ripetuta
-    background-position: center; // Centra l'immagine
+    background: linear-gradient(to bottom, #87CEEB, #00BFFF 25%, #1E90FF 50%, #00BFFF 75%, #87CEEB), /* Mare */
+    linear-gradient(to bottom, #F5DEB3, #FFE4B5 25%, #FFE4C4 50%, #FFDAB9 75%, #F5DEB3); /* Spiaggia */
+background-blend-mode: overlay; /* Miscelare i gradienti */
     padding: 20px;
 }
 
