--- a/assets/SCSS/portfolio.scss
+++ b/assets/SCSS/portfolio.scss
@@ -50,7 +50,7 @@ nav {
                     height: 2px;
                     bottom: -5px;
                     left: 0;
-                    background-color: #FFC75E;
+                    background-color: #b507d0ae;
                     visibility: hidden;
                     transition: all 0.3s ease-in-out;
                 }
@@ -65,7 +65,7 @@ nav {
 }
 
 .btn-download {
-    background-color: #FFC75E;
+    background-color: #d6a8ddfa;
     color: rgb(5, 18, 47);
     padding: 10px 20px;
     text-decoration: none;
