--- a/assets/SCSS/portfolio.css
+++ b/assets/SCSS/portfolio.css
@@ -49,7 +49,7 @@ nav ul li a::before {
   height: 2px;
   bottom: -5px;
   left: 0;
-  background-color: #FFC75E;
+  background-color: rgba(181, 7, 208, 0.6823529412);
   visibility: hidden;
   transition: all 0.3s ease-in-out;
 }
@@ -59,7 +59,7 @@ nav ul li a:hover::before {
 }
 
 .btn-download {
-  background-color: #FFC75E;
+  background-color: rgba(214, 168, 221, 0.9803921569);
   color: rgb(5, 18, 47);
   padding: 10px 20px;
   text-decoration: none;
