--- a/assets/CSS/contact.css
+++ b/assets/CSS/contact.css
@@ -1,7 +1,3 @@
-:root {
-    --fa-rotate-angle: none; /* Valore di default valido per la rotazione */
-}
-
 /* Generale */
 * {
     box-sizing: border-box;
@@ -185,11 +181,15 @@ main {
 }
 
 .social-icon:hover i {
-    transform: rotate(var(--fa-rotate-angle, none)); 
+    --fa-rotate-angle: 0deg;  
 }
 
 .fa-rotate-by {
-    transform: rotate(var(--fa-rotate-angle, none)); 
+    --fa-rotate-angle: 0deg; 
+}
+
+:root {
+    --fa-rotate-angle: 0deg; /* Valore di default valido per la rotazione */
 }
 
 footer {
